Bug fixes and enhancements to UMA feature.
- Fix wso2/product-is#4301: Introduce extension point at token introspection to inject uma permission info.
- Fix wso2/product-is#4309: Save permission ticket against access token.